# bottle-caps-detection

./: .gitignore  Dockerfile  README.md  pyproject.toml  settings.yaml
.github/workflows/: main.yml
bottle_cap_dataset/: dataset.yaml  inspect_image.ipynb
notebook/: BottleCaps_Detection_inference.ipynb  BottleCaps_Detection_train.ipynb  README.md
src/bsort/: infer.py  main.py  quantize.py  train.py
test/: conftest.py  test_cli.py
